@@ -20,3 +20,5 @@
 	mov	wsp, #0x33030000
 
 .set u16, 0xfff0
+
+	ldr	x0, [x0, #257]
